@@ -1,22 +1,32 @@
 package fr.osallek.osasaveextractor.service.object.save;
 
+import fr.osallek.eu4parser.model.game.Religion;
 import fr.osallek.eu4parser.model.save.Save;
+import fr.osallek.eu4parser.model.save.country.SaveCountry;
+import fr.osallek.eu4parser.model.save.province.SaveProvince;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 
 import java.time.LocalDate;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.SortedSet;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentSkipListSet;
-import java.util.stream.Collectors;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.DoubleConsumer;
+import java.util.function.Predicate;
 
 public class SaveDTO {
 
     private final String id;
 
     private final String name;
+
+    private final String provinceImage;
+
+    private final String colorsImage;
 
     private final LocalDate date;
 
@@ -46,18 +56,26 @@ public class SaveDTO {
 
     private final CelestialEmpireDTO celestialEmpire;
 
-    private final List<Integer> institutions;
+    private final List<InstitutionDTO> institutions;
 
     private final DiplomacyDTO diplomacy;
 
-    public SaveDTO(Save save) {
+    private final List<NamedImageLocalisedDTO> buildings;
+
+    private final List<NamedImageLocalisedDTO> advisorTypes;
+
+    private final List<TradeGoodDTO> tradeGoods;
+
+    public SaveDTO(Save save, String provinceImage, String colorsImage, Map<String, Religion> religions, DoubleConsumer percentCountriesConsumer) {
+        this.provinceImage = provinceImage;
+        this.colorsImage = colorsImage;
         this.id = UUID.randomUUID().toString();
         this.name = save.getName();
         this.date = save.getDate();
-        this.nbProvinces = Collections.max(save.getGame().getProvinces().keySet()); //Get the greatest id
+        this.nbProvinces = Collections.max(save.getGame().getProvinces().keySet()); //Get the greatest link
         this.teams = CollectionUtils.isNotEmpty(save.getTeams()) ? save.getTeams().stream().map(TeamDTO::new).toList() : null;
 
-        save.getProvinces().values().parallelStream().forEach(province -> {
+        save.getProvinces().values().forEach(province -> {
             if (province.isImpassable()) {
                 this.impassableProvinces.add(new SimpleProvinceDTO(province));
             } else if (province.isOcean()) {
@@ -69,37 +87,64 @@ public class SaveDTO {
             }
         });
 
-        this.areas = save.getAreas().values().stream().map(AreaDTO::new).collect(Collectors.toList());
-        this.advisors = save.getAdvisors().values().stream().map(AdvisorDTO::new).collect(Collectors.toList());
-        this.countries = save.getCountries().values().parallelStream().map(country -> {
-            CountryDTO countryDTO = new CountryDTO(country, save.getDiplomacy());
+        this.areas = save.getAreas().values().stream().map(AreaDTO::new).toList();
+        this.advisors = save.getAdvisors().values().stream().map(AdvisorDTO::new).toList();
+
+        AtomicInteger i = new AtomicInteger();
+        this.countries = save.getCountries().values().parallelStream().filter(Predicate.not(SaveCountry::isObserver)).map(country -> {
+            CountryDTO countryDTO = new CountryDTO(save, country, save.getDiplomacy());
 
             countryDTO.getHistory().stream().filter(history -> StringUtils.isNotBlank(history.getChangedTagFrom())).forEach(history -> {
                 this.provinces.stream()
                               .filter(province -> province.isOwnerAt(history.getDate(), history.getChangedTagFrom()))
                               .forEach(province -> province.addOwner(history.getDate(), countryDTO.getTag()));
                 this.provinces.stream() //Add owner when inheriting from decision
-                              .filter(province -> CollectionUtils.isNotEmpty(province.getHistory()) && province.getHistory()
-                                                                                                               .stream()
-                                                                                                               .anyMatch(h -> h.getDate()
-                                                                                                                               .equals(history.getDate())
-                                                                                                                              && country.getTag()
-                                                                                                                                        .equals(h.getFakeOwner())))
+                              .filter(province -> CollectionUtils.isNotEmpty(province.getHistory())
+                                                  && province.getHistory().stream().anyMatch(h -> h.getDate().equals(history.getDate())
+                                                                                                  && country.getTag().equals(h.getFakeOwner())))
                               .forEach(province -> province.addOwner(history.getDate(), countryDTO.getTag()));
             });
+
+            i.getAndIncrement();
+            percentCountriesConsumer.accept((double) i.get() / save.getCountries().values().size());
+
             return countryDTO;
         }).toList();
-        this.cultures = save.getGame().getCultures().stream().map(CultureDTO::new).toList();
-        this.religions = save.getReligions().getReligions().values().stream().filter(r -> r.getGameReligion() != null).map(ReligionDTO::new).toList();
+
+        this.cultures = save.getGame().getCultures().stream().map(c -> new CultureDTO(save, c)).toList();
+        this.religions = save.getReligions()
+                             .getReligions()
+                             .values()
+                             .stream()
+                             .filter(r -> religions.containsKey(r.getName()))
+                             .map(r -> new ReligionDTO(save, r, religions.get(r.getName())))
+                             .toList();
         this.hre = new HreDTO(save.getHre());
         this.celestialEmpire = new CelestialEmpireDTO(save.getCelestialEmpire());
-        this.institutions = save.getInstitutions()
-                                .getOrigins()
+        this.institutions = save.getGame()
+                                .getInstitutions()
                                 .stream()
-                                .map(saveProvince -> saveProvince == null ? 0 : saveProvince.getId())
-                                .toList()
-                                .subList(0, (int) save.getInstitutions().getNbAvailable());
+                                .filter(institution -> save.getInstitutions().isAvailable(institution))
+                                .map(institution -> {
+                                    SaveProvince origin = save.getInstitutions().getOrigin(institution);
+                                    return origin != null ? new InstitutionDTO(save, institution, save.getInstitutions().getOrigin(institution).getId())
+                                                          : new InstitutionDTO(save, institution, 0);
+                                })
+                                .toList();
         this.diplomacy = new DiplomacyDTO(save.getDiplomacy());
+        this.buildings = save.getGame()
+                             .getBuildings()
+                             .stream()
+                             .map(building -> new NamedImageLocalisedDTO(save.getGame().getLocalisation("building_" + building.getName()),
+                                                                         building.getImage(), building.getName()))
+                             .toList();
+        this.advisorTypes = save.getGame()
+                                .getAdvisors()
+                                .stream()
+                                .map(advisor -> new NamedImageLocalisedDTO(save.getGame().getLocalisation(advisor.getName()), advisor.getDefaultImage(),
+                                                                           advisor.getName()))
+                                .toList();
+        this.tradeGoods = save.getGame().getTradeGoods().stream().map(tradeGood -> new TradeGoodDTO(save, tradeGood)).toList();
     }
 
     public String getId() {
@@ -108,6 +153,14 @@ public class SaveDTO {
 
     public String getName() {
         return name;
+    }
+
+    public String getProvinceImage() {
+        return provinceImage;
+    }
+
+    public String getColorsImage() {
+        return colorsImage;
     }
 
     public LocalDate getDate() {
@@ -166,11 +219,23 @@ public class SaveDTO {
         return celestialEmpire;
     }
 
-    public List<Integer> getInstitutions() {
+    public List<InstitutionDTO> getInstitutions() {
         return institutions;
     }
 
     public DiplomacyDTO getDiplomacy() {
         return diplomacy;
+    }
+
+    public List<NamedImageLocalisedDTO> getBuildings() {
+        return buildings;
+    }
+
+    public List<NamedImageLocalisedDTO> getAdvisorTypes() {
+        return advisorTypes;
+    }
+
+    public List<TradeGoodDTO> getTradeGoods() {
+        return tradeGoods;
     }
 }
